--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,29 @@
+async-generator==1.10
+attrs==22.2.0
 autopep8==1.5.7
 beautifulsoup4==4.9.3
-certifi==2021.5.30
+certifi==2022.12.7
 charset-normalizer==2.0.3
+exceptiongroup==1.1.0
+h11==0.14.0
 idna==3.2
 lxml==4.6.3
 oauthlib==3.1.1
+outcome==1.2.0
 pycodestyle==2.7.0
 PySocks==1.7.1
-python-dotenv==0.18.0
 pytz==2021.1
 requests==2.26.0
 requests-oauthlib==1.3.0
+selenium==4.7.2
 six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.2.1
 toml==0.10.2
+trio==0.22.0
+trio-websocket==0.9.2
 tweepy==3.10.0
+typing-extensions==4.4.0
 urllib3==1.26.6
-git+https://github.com/Joeclinton1/google-images-download@patch-1#egg=google-images-download
+wsproto==1.2.0
