--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,13 @@ exceptiongroup==1.1.0
 h11==0.14.0
 idna==3.2
 lxml==4.6.3
-oauthlib==3.1.1
+oauthlib==3.2.2
 outcome==1.2.0
 pycodestyle==2.7.0
 PySocks==1.7.1
+python-dotenv==0.18.0
 pytz==2021.1
-requests==2.26.0
+requests==2.31.0
 requests-oauthlib==1.3.0
 selenium==4.7.2
 six==1.16.0
@@ -23,7 +24,7 @@ soupsieve==2.2.1
 toml==0.10.2
 trio==0.22.0
 trio-websocket==0.9.2
-tweepy==3.10.0
-typing-extensions==4.4.0
+tweepy==4.14.0
+typing_extensions==4.4.0
 urllib3==1.26.6
 wsproto==1.2.0
